fix PostCapture  scroll & overflow

--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -12,7 +12,10 @@ mat-sidenav {
 }
 
 mat-sidenav-content {
-  overflow: hidden;
+  // overflow-x: hidden;
+  width: 100%;
+  overflow-y: scroll; 
+  overflow-x: hidden; 
 }
 
 mat-toolbar {
